Messing around with apis

--- a/renderer/public/other.html
+++ b/renderer/public/other.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Electron App</title>
+    <title>Other Window</title>
     <style>
       html, body, #root {
         padding: 0;
